# Efficient-Compression-Tool

./: .gitignore
src/: CMakeLists.txt  gztools.cpp  main.cpp  main.h  support.cpp  support.h
src/leanify/: leanify.cpp  zip.cpp
src/lodepng/: lodepng.cpp
src/optipng/: optipng.cpp
src/zlib/: gzguts.h  zconf.h
src/zopfli/: deflate.cpp
